adjust tests remove ide warnings